Fix overflow of response in SmallSquare

--- a/src/PageBoard/Board/board.scss
+++ b/src/PageBoard/Board/board.scss
@@ -5,6 +5,8 @@
     width: 100%;
     height: 80%;
 
+    max-height: 80vh;
+
     box-sizing: border-box;
 
     padding-left: sizes.$xl;
