--- a/src/common/Square/square.scss
+++ b/src/common/Square/square.scss
@@ -11,6 +11,8 @@
   font-size: sizes.$text-lg;
   box-sizing: border-box;
 
+  overflow: scroll;
+
   &_clickable {
     cursor: pointer;
   }
